cmake_minimum_required(VERSION 3.9)
project(ClionsProject)

set(CMAKE_CXX_STANDARD 11)

add_executable(ClionsProject 105.cpp 235.cpp 236.cpp 237.cpp 112.cpp 113.cpp 114.cpp 95.cpp 96.cpp 275.cpp 278.cpp 279.cpp 284.cpp 287.cpp 289.cpp 290.cpp 292.cpp 299.cpp 300.cpp 307.cpp 309.cpp 313.cpp 318.cpp 319.cpp 322.cpp 324.cpp)
