cmake_minimum_required(VERSION 3.9)
project(ClionsProject)

set(CMAKE_CXX_STANDARD 11)

add_executable(ClionsProject 105.cpp 235.cpp 236.cpp 237.cpp 112.cpp 113.cpp 114.cpp 95.cpp 96.cpp 275.cpp 278.cpp 279.cpp 284.cpp 287.cpp 289.cpp 290.cpp 292.cpp 299.cpp 300.cpp 307.cpp 309.cpp 313.cpp 318.cpp 319.cpp 322.cpp 324.cpp 341.cpp 342.cpp 343.cpp 344.cpp 345.cpp 373.cpp 374.cpp 402.cpp 404.cpp 409.cpp 405.cpp 406.cpp 412.cpp 433.cpp 434.cpp 435.cpp 430.cpp 429.cpp 427.cpp 423.cpp 424.cpp 419.cpp 417.cpp 416.cpp 415.cpp 414.cpp 413.cpp 436.cpp 437.cpp 438.cpp 441.cpp 442.cpp 443.cpp 445.cpp 447.cpp 448.cpp 450.cpp 459.cpp)
